--- a/client/public/index.html
+++ b/client/public/index.html
@@ -20,6 +20,7 @@
       integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr"
       crossorigin="anonymous"
     />
+    <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDB3I1jK9QxzxbbLvedWlb6rajAkTGH2JE&libraries=places"></script>
   </head>
   <body>
     <noscript>
