--- a/client/public/index.html
+++ b/client/public/index.html
@@ -10,7 +10,7 @@
       rel="stylesheet"
       href="https://unpkg.com/normalize.css@8.0.1/normalize.css"
     />
-    <link href="https://fonts.googleapis.com/css?family=Lakki+Reddy|Leckerli+One|Pacifico|Rancho|Monoton" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Lakki+Reddy|Monoton|Rock+Salt|Sedgwick+Ave" rel="stylesheet">
     <link
       rel="stylesheet"
       href="https://use.fontawesome.com/releases/v5.7.2/css/all.css"
