lots of styling / theme with veutify plus reformat with vuetify componets for AddVenueModal

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -17,6 +17,7 @@
       integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr"
       crossorigin="anonymous"
     />
+    <link href="https://fonts.googleapis.com/css?family=Material+Icons" rel="stylesheet">
     <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDB3I1jK9QxzxbbLvedWlb6rajAkTGH2JE&libraries=places"></script>
   </head>
   <body>
